# gdexample

./: .editorconfig  .gitignore  Makefile  README.md  SConstruct
src/: gdexample.cpp  gdexample.h  register_types.cpp  register_types.h
test/: CMakeLists.txt
test/src/: test_gdexample.cpp
